added flower section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 
     </header>
     <main>
-        <div class="cards">
+        <section>
+            <div class="cards">
             <div class="card-content">
                 <h3 class="card-title"><span class="gold-1">Our</span>Plants</h3>
                 <p class="card-description gray-1">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
@@ -111,6 +112,21 @@
             </div>
         </div>
 
+        </section>
+        <section class="flower-section">
+            <div class="flower display-flex">
+                <img class="flower-img" src="image/flower-store.png" alt="">
+                <div class="flower-content">
+                    <h3 class="flower-title">Flower & Plants Lover</h3>
+                    <ul class="gray-1 flower-ul">
+                        <li class="flower-desc">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li class="flower-desc">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li class="flower-desc">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    </ul>
+
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
