added flower section

--- a/index.html
+++ b/index.html
@@ -114,8 +114,10 @@
 
         </section>
         <section class="flower-section">
+             <!-- <img class="trusted-badge" src="image/trusted-badge.png" alt=""> -->
             <div class="flower display-flex">
                 <img class="flower-img" src="image/flower-store.png" alt="">
+                
                 <div class="flower-content">
                     <h3 class="flower-title">Flower & Plants Lover</h3>
                     <ul class="gray-1 flower-ul">
@@ -123,9 +125,36 @@
                         <li class="flower-desc">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
                         <li class="flower-desc">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
                     </ul>
+                </div>
+               
+            </div>
+        </section>
+       <section>
+            <div class="deals">
+                <div class="deal">
+                    <h3 class="deals-content"><span class="gold-1">Latest</span> Deals</h3>
+                 <p class="deals-title gray-1">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh</p>
+                </div>
+
+                <div class="deals-image">
+                    <div class="deals-img">
+                     <img class="img-1" src="image/deal-bloom.png" alt="">
+                    <img class="img-2 img-1" src="image/deal-ana.png" alt="">
+                    </div>
+                    <img class="img-3 img-1" src="image/deal-zabo.png" alt="">
 
                 </div>
+
             </div>
+
+        </section>
+        <section class="form">
+            <div class="form-info">
+                <h3 class="form-description">Join the colorful Bunch</h3>
+                <input type="email" name="" id="" placeholder="Write Email">
+                <button class="form-btn">Subscribe</button>
+            </div>
+
         </section>
     </main>
     <footer>
