added form section

--- a/index.html
+++ b/index.html
@@ -151,8 +151,10 @@
         <section class="form">
             <div class="form-info">
                 <h3 class="form-description">Join the colorful Bunch</h3>
-                <input type="email" name="" id="" placeholder="Write Email">
+                <div class="form-besic">
+                    <input  class="form-email" type="email" name="" id="" placeholder="Write Email">
                 <button class="form-btn">Subscribe</button>
+                </div>
             </div>
 
         </section>
