--- a/index.html
+++ b/index.html
@@ -160,6 +160,32 @@
         </section>
     </main>
     <footer>
+        <div class="foot display-flex">
+            <div class="footer-subtitle">
+                <img src="image/logo.png" alt="">
+                <p class="gray-1">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+            </div>
+            <div class="footer-item">
+                <ul class="footer-list gray-1">
+                    <li class="items">Home</li>
+                    <li class="items">About Us</li>
+                    <li class="items">Blog</li>
+                    <li class="items">FAQ</li>
+                    <li class="items">Contact Us</li>
+                    <li class="items">Features</li>
+                    <li class="items">Pricing</li>
+                    <li class="items">Privacy Policy</li>
+                    <li class="items">Terms of Service</li>
+                    <li class="items">Help Center</li>
+                </ul>
+            </div>
+            <div class="footer-logos">
+                <img class="footer-image" src="image/icon-linkedin.png" alt="">
+                <img class="footer-image" src="image/icon-twitter.png" alt="">
+                <img class="footer-image" src="image/icon-facebook.png" alt="">
+                <img class="footer-image" src="image/icon-youtube.png" alt="">
+            </div>
+        </div>
 
     </footer>
 </body>
